--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="indoor_garage">Indoor Garage</string>
     <string name="outdoor_garage">Outdoor Garage</string>
     <string name="google_maps_key">AIzaSyA__YSz-DE9A_tlqNU68U8aS75yusXrKxs</string>
+    <string name="home">Home</string>
+    <string name="explore">Explore</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
